--- a/src/frontend/src/pages/Root/index.module.sass
+++ b/src/frontend/src/pages/Root/index.module.sass
@@ -3,10 +3,16 @@
     height: 100vh
     width: 100vw
 
+.outlet
+    flex-grow: 1
+    
 div
     font-family: 'Roboto'
 
 a
     text-decoration: none
+
+textarea:focus, input:focus
+    outline: none
 
 
